2009-01-19  Richard Hult  <richard@imendio.com>

	* Release 0.23.

	* configure.ac: Bump version.

2008-12-01  Richard Hult  <richard@imendio.com>

	* NEWS: Update for 0.22 release.

	* src/dh-preferences.c: (preferences_system_fonts_toggled_cb),
	(preferences_connect_conf_listeners): Fix build with recent gcc
	versions.

	* src/dh-util.c: (dh_util_font_get_variable), (font_notify_cb):
	Fix the font size and remove debug output.

2008-12-01  Richard Hult  <richard@imendio.com>

	* NEWS:
	* src/dh-preferences.c: (preferences_system_fonts_toggled_cb),
	(preferences_connect_conf_listeners):
	* src/dh-util.c: (dh_util_font_get_variable), (font_notify_cb):

2008-12-01  Richard Hult  <richard@imendio.com>

	* NEWS: Update for 0.22 release.

2008-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-util.[ch]: Add code to handle updating the font settings
	for all open web views. Needs to be split out in its own file
	later.

2008-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c: Remove the code that previously was used
	to update the font settings in the HTML widget (now unused).

2008-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_open_new_tab): Add commented out code
	snippet to make it easier to tweak the CSS.

2008-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-assistant-view.c (assistant_button_press_event): Don't
	block button 1 events. Fixes selecting text in the assistant.

	* configure.ac: Bump version to 0.22.

2008-11-06  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_activate_close),
	(window_activate_about), (window_populate), (window_open_new_tab):
	Don't show notebook tabs if there is only one tab to save some
	space and get a cleaner look. Paddings/shadow might need some
	further tweaking.

2008-11-03  Richard Hult  <richard@imendio.com>

	* src/dh-search.c:
	* src/dh-window.c: Revert the padding changes.
	- Fix title updating when switching tabs.